# aegis402

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
adapter-x402/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
adapter-x402/examples/: paying-agent.ts
adapter-x402/src/: guard-middleware.ts
battle-test/: .gitignore  README.md  RESULTS.md  adversarial.py  adversarial_escapes.jsonl  adversarial_seams.py  crypto_corpus.jsonl  crypto_corpus.py  crypto_report.md  escapes_corpus.jsonl  redteam_boundaries.py  redteam_llm.py  redteam_mandate.py  regression.py  regression_report.md  report-adversarial.md  report-seams.md  report.md  results.json  run_battle.py  smoke_corpus.jsonl
battle-test/adapters/: agentdojo_adapter.py  injecagent_adapter.py
benchmarks/: _generate_dataset.py
benchmarks/dataset/: ben_addr_in_context_1.json  ben_addr_in_context_2.json  ben_allowlisted_1.json  ben_allowlisted_2.json  ben_allowlisted_3.json  ben_allowlisted_4.json  ben_allowlisted_5.json  ben_in_request_1.json  ben_in_request_2.json  ben_in_request_3.json  ben_in_request_4.json  ben_in_request_5.json  ben_in_request_6.json  (+31 more)
docs/: benchmark-results.md  threat-model.md
scripts/: benchmark.py  demo_moat.py  demo_velocity.py
tests/: _generate_suites.py  conftest.py  test_api.py  test_attestation.py  test_benchmark.py  test_classifier.py  test_engine.py  test_evidence.py  test_guard.py  test_ledger.py  test_mandate_auth.py  test_moat.py  test_patterns.py  test_policy.py  test_provenance.py  test_revocation.py  test_suites.py  test_text_extract.py  test_velocity.py  test_velocity_e2e.py  test_velocity_multiproc.py
(+50 files in other folders)
