[project]
name = "aegis402"
version = "0.1.0"
description = "Prompt-injection guard for agentic x402 payments (ALLOW / BLOCK / REVIEW)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Alex" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "typer>=0.15",
    "rich>=13.9",
    "regex>=2024.11",
    "sqlmodel>=0.0.22",
    "eth-utils>=5.1",
    "eth-hash[pycryptodome]>=0.7",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.46",
    "torch>=2.5",
]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.8",
    "black>=24.10",
    "mypy>=1.13",
]

[project.scripts]
aegis402 = "aegis402.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis402"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/aegis402/cli.py" = ["B008"]          # Typer uses calls in argument defaults by design.
"tests/_generate_suites.py" = ["E501"]    # fixture payloads contain long, verbatim strings.

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/aegis402"]

[[tool.mypy.overrides]]
module = ["regex.*", "transformers.*", "eth_utils.*", "eth_utils"]
ignore_missing_imports = true
implicit_reexport = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
